colang-cli/tests/samples/good/pointer_parameter.co
fun square_inplace(x: &int) {
  *x = *x * *x;
}

fun main() {
  var x = 2;
  square_inplace(&x);
  assert(x == 4);
}
