colang-cli/tests/samples/compile_error/address_of_rvalue.co
fun main() {
  var p = &5;
}
